fixed overflow issue with animations on mobile with partner section

--- a/styles/scss/_partners.scss
+++ b/styles/scss/_partners.scss
@@ -1,6 +1,7 @@
 #partners {
     padding-top: 50px;
     background-color: $primary;
+    overflow: hidden;
 
     h2 {
         color: $offWhite;
